--- a/content/04_sectionMachines.yaml
+++ b/content/04_sectionMachines.yaml
@@ -9,7 +9,7 @@ data:
     id: 0
     title: "Cráter Jezero"
     subtitle: "Perseverance recorrerá el Cráter Jezero, que se cree que fue el lugar que albergó un lago marciano hace miles de millones de años."
-    machine: Perseverance
+    machine: Perseverance (Rover)
     cabInstrument: MEDA
     assets:
       backgroundIllustration: /img/004_1.webp
@@ -24,7 +24,7 @@ data:
       lon: 70
       lat: 50
     tabs:
-      - #1
+      - #0 -- TAB 1
         meta:
           launch: "30.07.2020 - 12:50 UTC"
           arrival: "18.02.2021 - 20.55 UTC"
@@ -47,29 +47,75 @@ data:
           - Mastercam-Z
           - Escaneo de ambientes habitables con raman y luminiscencia para compuestos orgánicos y químicos (SHERLOC)
           - Ingenuity
-        #curiosities:
-          #- A los 90 segundos tras el aterrizaje el módulo de descenso comenzó a transmitir datos hacia el orbitador. A los 20 segundos se perdió la conexión. Consiguió mandar una imagen parcial de 70 líneas que muestran un fondo gris sin detalles.
         contribution:
           - Destaca la incorporación del primer “helicóptero explorador” que sobrevuele la superficie marciana, <em>el Ingenuity</em>
         moreinfo: true
         assets:
           resources:
             - #1
-              title: Más información
-              author: Para conocer mejor el Perseverance
+              title: Para conocer mejor el Perseverance
+              author: Página web de la NASA
               url: https://mars.nasa.gov/mars2020/
               icon: link
               target: true
 
         picture: "/img/machines/perseverance.webp"
         picture_flag: "/img/flags/EEUU.svg"
+      - #1 -- TAB 2
+        meta:
+          title: Mars Environmental Dynamics Analyzer
+          translate: "Analizador de Dinámica Ambiental Marciana"
+          activity: "Activo, previsto un año y medio marciano."
+          land: "España"
+          agency: "Centro de Astrobiología (CAB)"
+          head_researcher: José Rodríguez-Manfredi
+          status: "Exito"
+        goals:
+          - Estudiar la dinámica atmosférica de Marte
+          - Cómo se comporta y como se relacionan la temperatura, la radiación o la humedad en sus capas bajas
+          - Cuál es la acción del polvo marciano en dicha atmósfera
+          - Cómo son los cambios cíclicos que allí se producen
+        instruments:
+          - MEDA es un conjunto de sensores ambientales diseñados para registrar las propiedades ópticas del polvo y seis parámetros atmosféricos, <strong>velocidad y dirección del viento, presión, humedad relativa, temperatura del aire, temperatura del suelo y radiación</strong>.
+          - La medición sistemática y según una cadencia y frecuencia configuradas de acuerdo con la disponibilidad de recursos, es uno de sus principales valores. MEDA tiene un alto grado de autonomía operativa, se activa cada hora y después de grabar y almacenar datos, entra en reposo independientemente de las demás actividades del Perseverance, tanto de día como de noche.
 
+        contribution:
+          - Suministra datos sobre las condiciones meteorológicas (temperatura, humedad, velocidad y dirección del viento en torno al Perseverance. Los datos del MEDA contribuyen a predecir el clima de Marte de manera más precisa, lo que será de fundamental importancia en futuras colonizaciones
+          - Estudia el tamaño y forma del polvo en el terreno y en la atmósfera marcianos ya que, siendo muy abundante, condiciona el clima, la temperatura y dirige ciertos procesos químicos. Así se comprobará como afecta al rendimiento del propio rover y su instrumental.
+          - Mide la radiación, con lo que ayuda a entender sus efectos sobre restos de vida que puedan yacer en las rocas. Con su sensor de humedad, detecta cómo este se intercambia entre la atmósfera y el suelo
+        curiosities:
+          - MEDA no es la primera estación meteorológica española en Marte. Ya hay otras dos, una a bordo del InSight (TWINS) y otra con el Curiosity (REMS). Lo que conforma una pequeña red de estaciones meteorológicas españolas.
+
+        moreinfo: true
+        assets:
+          resources:
+            - #1
+              title: Para conocer mejor el MEDA
+              author: Página web del CAB
+              url: https://cab.inta-csic.es/proyectos/mision-mars-2020-meda/
+              icon: link
+              target: true
+            - #2
+              title: Para conocer mejor el MEDA
+              author: Página web de la NASA
+              url: https://mars.nasa.gov/mars2020/spacecraft/instruments/meda/
+              icon: link
+              target: true
+            - #3
+              title: Datos atmosféricos de Marte (MEDA)
+              author: Página web de la NASA
+              url: https://mars.nasa.gov/mars2020/weather/
+              icon: link
+              target: true
+        picture: "/img/machines/perseverance_meda.webp"
+        picture_flag: "/img/flags/spain.svg"
 
   - # 1 - Cráter Gale // CURIOSITY
     id: 1
     title: "Cráter Gale"
-    subtitle: "Primer amartizaje controlado."
-    machine: Curiosity
+    subtitle: "El objetivo principal de Curiosity es saber si Marte tuvo alguna vez condiciones ambientales adecuadas para que pudieran surgir formas de vida microbianas."
+    machine: Curiosity (Rover)
+    cabInstrument: REMS
     assets:
       backgroundIllustration: /img/004_2.webp
     mainText:
@@ -83,71 +129,101 @@ data:
       lon: 70
       lat: 50
     tabs:
-      - #1
+      - #0 -- TAB 1
         meta:
-          launch: "28.05.1971 - 15:26 UTC"
-          arrival: "02.12.1971 - 13.50 UTC"
-          place: "Cráter Ptolomeo (Terra Sirenum)"
-          activity: "2 minutos (Orbitador 452 días)"
-          land: "URSS"
-          agency: "Unión Soviética"
-          status: "Exito parcial"
+          launch: "26.11.2011 - 15:02 UTC"
+          arrival: "06.08.2012 - 06.31 UTC"
+          place: "Cráter Gale"
+          activity: "1 año marciano (1,88 años terrestres; 686 días). Aunque en 2021 aún sigue operativo."
+          land: "USA"
+          agency: "NASA"
+          status: "Exito"
         goals:
-          - Realizar un amartizaje suave en Marte
-          - Devolver fotografías de la superficie
-          - Enviar datos de las condiciones meteorológicas, de la composición atmosférica y de las propiedades mecánicas y químicas del suelo.
+          - Determinar si existió vida alguna vez en Marte
+          - Caracterizar el clima de Marte
+          - Determinar su geología
+          - Prepararse para la exploración humana de Marte
         instruments:
-          - Aterrizador
-          - Dos cámaras de televisión para la obtención de vistas de 360º.
-          - Espectrómetro de masa.
-          - Sensores de temperatura, presión, composición y velocidad del viento.
-          - Dispositivos para medición de propiedades mecánicas y químicas del suelo.
-          - Pala mecánica para buscar compuestos orgánicos y signos de vida.
-          - Rover
-          - Penetrómetro dinámico
-          - Medidor de radiación.
-        curiosities:
-          - A los 90 segundos tras el aterrizaje el módulo de descenso comenzó a transmitir datos hacia el orbitador. A los 20 segundos se perdió la conexión. Consiguió mandar una imagen parcial de 70 líneas que muestran un fondo gris sin detalles.
+          - Análisis de muestras en Marte (SAM)
+          - Química y Cámara (ChemCam)
+          - Espectrómetro de rayos X de partículas alfa (APXS)
+          - Química y Mineralogía (CheMin)
+          - Albedo Dinámico de Neutrones (DAN)
+          - Mars Descent Imager (MARDI)
+          - Mars Hand Lens Imager (MAHLI)
+          - Cámara de mástil (Mastcam)
+          - Detector de evaluación de la radiación (RAD)
+          - <span class="toTab2">Estación de Monitoreo Ambiental de Rover (REMS)</span>
         contribution:
-          - La sonda Mars 3 fue la primera que realizó un amartizaje suave en la superficie de Marte.
-        picture: "/img/explorers/01.webp"
-        picture_flag: "/img/flags/URSS.svg"
-      - #2
+          - Se encuentran evidencias de agua líquida persistente en el pasado
+          - Se encuentra azufre, nitrógeno, oxígeno, fósforo y carbono en una muestra de polvo perforada. El antiguo Marte tenía la química adecuada para albergar microbios vivos
+          - Hay carbono orgánico en las rocas de Marte
+          - Hay metano presente y activo en la atmósfera de Marte
+          - La radiación podría suponer un riesgo para la salud de los humanos
+          - Marte ha perdido gran parte de su atmósfera original y de su inventario de agua
+        moreinfo: true
+        assets:
+          resources:
+            - #1
+              title: Para conocer mejor el Curiosity
+              author: Página web de la NASA
+              url: https://mars.nasa.gov/mars2020/
+              icon: link
+              target: true
+        picture: "/img/machines/curiosity.webp"
+        picture_flag: "/img/flags/EEUU.svg"
+      - #1 -- TAB 2
         meta:
-          launch: "28.05.1971 - 15:26 UTC"
-          arrival: "02.12.1971 - 13.50 UTC"
-          place: "Cráter Ptolomeo (Terra Sirenum)"
-          activity: "2 minutos (Orbitador 452 días)"
-          land: "URSS"
-          agency: "Unión Soviética"
-          status: "Exito parcial"
+          title: Rover Environmental Monitoring Station
+          translate: "Estación de Monitoreo Ambiental de Rover"
+          activity: "1 año marciano (1,88 años terrestres; 686 días). Aunque en 2021 aún sigue operativo."
+          land: "España"
+          agency: "Centro de Astrobiología (CAB)"
+          head_researcher: Javier Gómez-Elvira
+          status: "Exito"
         goals:
-          - Realizar un amartizaje suave en Marte
-          - Devolver fotografías de la superficie
-          - Enviar datos de las condiciones meteorológicas, de la composición atmosférica y de las propiedades mecánicas y químicas del suelo.
+          - Medir y proporcionar reportes diarios y estacionales sobre la presión atmosférica, la humedad, la radiación ultravioleta en superficie; la temperatura del aire y la temperatura del suelo alrededor del Curiosity.
         instruments:
-          - Aterrizador
-          - Dos cámaras de televisión para la obtención de vistas de 360º.
-          - Espectrómetro de masa.
-          - Sensores de temperatura, presión, composición y velocidad del viento.
-          - Dispositivos para medición de propiedades mecánicas y químicas del suelo.
-          - Pala mecánica para buscar compuestos orgánicos y signos de vida.
-          - Rover
-          - Penetrómetro dinámico
-          - Medidor de radiación.
-        curiosities:
-          - A los 90 segundos tras el aterrizaje el módulo de descenso comenzó a transmitir datos hacia el orbitador. A los 20 segundos se perdió la conexión. Consiguió mandar una imagen parcial de 70 líneas que muestran un fondo gris sin detalles.
+          - Dispone del instrumental meteorológico preciso para hacer registros por días y estaciones respecto a la meteorología en torno al rover.
         contribution:
-          - La sonda Mars 3 fue la primera que realizó un amartizaje suave en la superficie de Marte.
-        picture: "/img/explorers/01.webp"
-        picture_flag: "/img/flags/URSS.svg"
+          - Sensores infrarrojos toman mediciones de la intensidad de la radiación infrarroja que emite el suelo; con ello se obtiene una estimación de su temperatura.
+          - Otro sensor registra la humedad atmosférica
+          - Registra la temperatura del aire
+          - Resgistra la radiación ultravioleta en superficie y su correlación con cambios en variables ambientales
+        curiosities:
+          - REMS forma parte de la red de estaciones meteorológicas creadas por el CAB para las últimas tres misiones en Marte de la NASA.
+          - Una especie de "chimenea" pone en contacto un sensor localizado en el interior del rover con el medio externo. Un filtro lo protege del polvo marciano. De ese modo, puede medir las variaciones de presión motivadas por diferentes sucesos meteorológicos tales como frentes, remolinos, mareas atmosféricas …
 
+        moreinfo: true
+        assets:
+          resources:
+            - #1
+              title: Para conocer mejor el REMS
+              author: Página web del CAB
+              url: http://cab.inta-csic.es/rems/es/
+              icon: link
+              target: true
+            - #2
+              title: Para conocer mejor el REMS
+              author: Página web de la NASA
+              url: https://mars.nasa.gov/msl/spacecraft/instruments/rems/
+              icon: link
+              target: true
+            - #3
+              title: Datos atmosféricos de Marte (REMs)
+              author: Página web de la NASA
+              url: https://mars.nasa.gov/msl/weather/
+              icon: link
+              target: true
+        picture: "/img/machines/curiosity_rems.webp"
+        picture_flag: "/img/flags/spain.svg"
 
   - # 2 - Elyseum Planitia // INSIGHT
     id: 2
     title: "Elyseum Planitia"
-    subtitle: "Primer amartizaje controlado."
+    subtitle: "Analizar la corteza, el manto y el núcleo de Marte para y buscar las huellas de los procesos que formaron los planetas terrestres"
     machine: Insight
+    cabInstrument: TWINS
     assets:
       backgroundIllustration: /img/004_3.webp
     mainText:
@@ -161,35 +237,77 @@ data:
       lon: 70
       lat: 50
     tabs:
-      - #1
+      - #0 -- TAB 1
         meta:
-          launch: "28.05.1971 - 15:26 UTC"
-          arrival: "02.12.1971 - 13.50 UTC"
-          place: "Cráter Ptolomeo (Terra Sirenum)"
-          activity: "2 minutos (Orbitador 452 días)"
-          land: "URSS"
-          agency: "Unión Soviética"
-          status: "Exito parcial"
+          launch: "05.05.2018 - ?? UTC"
+          arrival: "26.11.2018 - ?? UTC"
+          place: "Cráter Gale"
+          activity: "Sigue en activo."
+          land: "USA"
+          agency: "NASA"
+          status: "Exito"
         goals:
-          - Realizar un amartizaje suave en Marte
-          - Devolver fotografías de la superficie
-          - Enviar datos de las condiciones meteorológicas, de la composición atmosférica y de las propiedades mecánicas y químicas del suelo.
+          - Entender la formación y evolución de los planetas terrestres a través de la investigación de la estructura interior y los procesos de Marte
+          - Determinar el nivel actual de actividad tectónica y la tasa de impacto de meteoritos en Marte
         instruments:
-          - Aterrizador
-          - Dos cámaras de televisión para la obtención de vistas de 360º.
-          - Espectrómetro de masa.
-          - Sensores de temperatura, presión, composición y velocidad del viento.
-          - Dispositivos para medición de propiedades mecánicas y químicas del suelo.
-          - Pala mecánica para buscar compuestos orgánicos y signos de vida.
-          - Rover
-          - Penetrómetro dinámico
-          - Medidor de radiación.
-        curiosities:
-          - A los 90 segundos tras el aterrizaje el módulo de descenso comenzó a transmitir datos hacia el orbitador. A los 20 segundos se perdió la conexión. Consiguió mandar una imagen parcial de 70 líneas que muestran un fondo gris sin detalles.
+          - Brazo robótico
+          - Cámara en el brazo (IDC)
+          - Cámara en el cuerpo del módulo de aterrizaje (ICC)
+          - Sismómetro (SEIS)
+          - <span class="toTab2">Estación meteorológica (TWINS)</span>
+          - Sensores para el estudio del flujo de calor y propiedades físicas (HP3)
+          - Experimento de rotación y estructura interior de InSight (RISE)
         contribution:
-          - La sonda Mars 3 fue la primera que realizó un amartizaje suave en la superficie de Marte.
-        picture: "/img/explorers/01.webp"
-        picture_flag: "/img/flags/URSS.svg"
+          - Terremotos frecuentes pero inferiores a 4º de magnitud
+          - El viento puede ocultar los terremotos. El viento sacude el propio suelo y crea un ruido que encubre los temblores.
+          - A pesar de los cientos de temblores, ninguno ha incluido ondas en la superficie.
+        curiosities:
+          - Desde el 28 de febrero de 2019, la sonda térmica desarrollada y construida por el Centro Aeroespacial Alemán (DLR), llamada "topo", intentó excavar en la superficie marciana para tomar la temperatura interna del planeta, proporcionando detalles sobre el motor térmico interior que impulsa la evolución y la geología de Marte. Pero la inesperada tendencia del suelo a aglutinarse privó al “topo” con forma de pico de la fricción que necesitaba para clavarse a una profundidad suficiente.
+        moreinfo: true
+        assets:
+          resources:
+            - #1
+              title: Para conocer mejor el Insight
+              author: Página web de la NASA
+              url: https://mars.nasa.gov/insight/
+              icon: link
+              target: true
+        picture: "/img/machines/insight.webp"
+        picture_flag: "/img/flags/EEUU.svg"
+      - #1 -- TAB 2
+        meta:
+          title: Temperature and Winds for InSight
+          translate: "Temperatura y vientos para InSight"
+          activity: "Aún está operativo."
+          land: "España"
+          agency: "Centro de Astrobiología (CAB)"
+          head_researcher: José Antonio Rodríguez-Manfredi
+          status: "Exito"
+        goals:
+          - '??'
+        instruments:
+          - Instrumento auxiliar del Insight pero fundamental para su misión científica. Tiene forma de mástil y se compone de dos sensores, un termómetro para medir la temperatura y un anemómetro para medir la velocidad y la dirección del viento dos veces por segundo. Así, los sensores registran de modo continuo las condiciones ambientales en el área de posicionamiento del Insight (Elyseum Planitia)
+        contribution:
+          - Registro de la temperatura del aire, la presión y los vientos en superficie, de un modo continuo y más preciso que en misiones previas.
+          - Contribuye a una mayor y mejor comprensión del planeta
+        curiosities:
+          - El diseño del TWINS está basado en el REMS (Rover Environmental Monitoring Station también creado por el CAB) que transporta el rover Curiosity.
+          - La tecnología del REMS ya demostró la capacidad y ventajas de su diseño, por el corto tiempo de desarrollo y costo, y su adaptabilidad a nuevas misiones y objetivos científicos incorporando ahora mejores prestaciones.
 
-
-
+        moreinfo: true
+        assets:
+          resources:
+            - #1
+              title: Para conocer mejor el TWINS
+              author: Página web del CAB
+              url: https://cab.inta-csic.es/proyectos/mision-insight-twins/
+              icon: link
+              target: true
+            - #3
+              title: Datos atmosféricos de Marte (TWINS)
+              author: Página web de la NASA
+              url: https://mars.nasa.gov/insight/weather/
+              icon: link
+              target: true
+        picture: "/img/machines/insight_twins.webp"
+        picture_flag: "/img/flags/spain.svg"
