Reorder machines & minor changes

--- a/content/08_sectionEsd.yaml
+++ b/content/08_sectionEsd.yaml
@@ -11,7 +11,7 @@ data:
     - En 2020, un grupo de profesores conformamos el <strong>seminario “Diseño para la Ciencia”</strong> con la línea de investigación <strong>“Análisis del rol del diseñador en equipos científicos”</strong>. Desde él, propusimos al CAB la creación de un producto de comunicación sobre el aterrizaje del Perseverance en Marte, <strong>que pusiera en valor la participación en la misión de dicho organismo español</strong> de excelencia, con el MEDA. Y aprovechar tal evento para destacar las presencias previas del CAB en el Planeta Rojo, con el REMS y el TWINS.
 
   secondaryText:
-    - Con ello queremos contribuir a la difusión del conocimiento científico y tecnológico, sobre todo a nivel divulgativo; y fomentar el trabajo conjunto entre científicos y diseñadores. Y así surge este scrollytelling …
+    - Con ello queremos contribuir a la difusión del conocimiento científico y tecnológico, sobre todo a nivel divulgativo; y fomentar el trabajo conjunto entre científicos y diseñadores.
 
 assets:
   backgroundIllustration: /img/008.webp
