Add minor typo details

--- a/content/01_sectionWelcome.yaml
+++ b/content/01_sectionWelcome.yaml
@@ -5,7 +5,7 @@ title: Sección
 menuTitle: Inicio
 
 data:
-  title: ¿Cómo podemos saber cuál es la temperatura y a qué suena el viento en el planeta rojo? Para descubrirlo quédate, la investigación española en Marte tiene las claves.
+  title: ¿Cómo podemos saber cuál es la temperatura y a qué suena el viento en el planeta rojo?<br>Para descubrirlo quédate, la investigación española en Marte tiene las claves.
   mainText:
     #- El <strong>Centro de Astrobiología</strong>, creado en 1998 como centro mixto entre el Centro Superior de Investigaciones Científicas (CSIC) y el Instituto Nacional de Técnica Aeroespacial (INTA), presentó a la NASA el año de su fundación junto a científicos norteamericanos una propuesta para unir el <strong>CAB</strong> al entonces recién creado NASA Astrobiology Institute (NAI). Su integración se produjo en abril de 2000 convirtiéndose en el primer Miembro Asociado al NAI fuera de los Estados Unidos.
     #- Los equipos multidisciplinares del <strong>CAB</strong> ya están estudiando la atmósfera de Marte desde tres estaciones ambientales independientes construidas y operativas bajo su liderazgo, <strong>REMS</strong> (desde 2012, en el rover Curiosity, en el Cráter Gale), <strong>TWINS</strong> (desde 2018, en el Insight, en la región de Elyseum Planitia), <strong>MEDA</strong> (desde febrero de 2021 en el rover Perseverance, en al Cráter Jezero,).
