--- a/content/03_sectionExplorersHome.yaml
+++ b/content/03_sectionExplorersHome.yaml
@@ -5,7 +5,7 @@ title: Sección
 menuTitle: Marte como lugar
 
 data:
-  title: Marte como lugar. La exploración de la superficie marciana a partir de la década de 1960.
+  title: Marte como lugar. <br>La exploración de la superficie marciana a partir de la década de 1960.
   mainText:
     - Las distintas misiones enviadas a Marte, ya sea para orbitar a su alrededor o para posarse en él, han aportado ingentes datos sobre la geografía marciana.
     - <strong>La observación orográfica en alto detalle del planeta ha demostrado que alguna vez fue geológicamente tan activo como la Tierra</strong>.
