--- a/content/03_sectionExplorers.yaml
+++ b/content/03_sectionExplorers.yaml
@@ -5,7 +5,7 @@ title: Sección
 menuTitle: Histórico de misiones
 showMenu: false
 assets:
-  backgroundIllustration: /img/003_b.webp
+  backgroundIllustration: /img/backgrounds/003_b.webp
 
 data:
 #top: lat, left: lon
