--- a/content/06_SectionCab01.yaml
+++ b/content/06_SectionCab01.yaml
@@ -2,7 +2,7 @@
 # https://www.figma.com/file/LVJsJViTo0ivzgnE0rgW3D/rems_wireframes?node-id=2873%3A1486
 
 title: Sección
-menuTitle: Inicio
+menuTitle: El CAB
 
 data:
   title: El CAB
