--- a/content/08_sectionEsd.yaml
+++ b/content/08_sectionEsd.yaml
@@ -14,7 +14,7 @@ data:
     - Con ello queremos contribuir a la difusión del conocimiento científico y tecnológico, sobre todo a nivel divulgativo; y fomentar el trabajo conjunto entre científicos y diseñadores.
 
 assets:
-  backgroundIllustration: /img/008.webp
+  backgroundIllustration: /img/backgrounds/008.webp
   resources:
     - #1
       title: Visita la web e/s/d Madrid
