--- a/content/07_SectionCab02.yaml
+++ b/content/07_SectionCab02.yaml
@@ -2,7 +2,7 @@
 # https://www.figma.com/file/LVJsJViTo0ivzgnE0rgW3D/rems_wireframes?node-id=2873%3A1486
 
 title: Sección
-menuTitle: Inicio
+menuTitle: La investigación en el CAB
 
 data:
   title: La investigación en el CAB
