Add some yellow details

--- a/content/02_sectionIntroMisions.yaml
+++ b/content/02_sectionIntroMisions.yaml
@@ -5,7 +5,7 @@ title: Sección
 menuTitle: Marte como imaginario
 
 data:
-  title: Marte como imaginario. <br>La observación de Marte en su órbita desde la Antigüedad hasta la década de 1960
+  title: <span class="primary_color">Marte como imaginario.</span> <br>La observación de Marte en su órbita desde la Antigüedad hasta la década de 1960
   mainText:
     - Desde los astrónomos Egipcios en el segundo milenio antes de Cristo, Marte ha sido sujeto de observación y estudio desde la Tierra.
     - En 1660 Galileo lo observó con su telescopio y posteriormente otros astrónomos como Huygens, Cassini, Proctor y Dawes o Schiaparelli, dibujaron su cartografía e hicieron sus observaciones con mayor o menor precisión.
