--- a/content/04_sectionIntroMachines.yaml
+++ b/content/04_sectionIntroMachines.yaml
@@ -5,7 +5,7 @@ title: Sección
 menuTitle: Las máquinas son los nuevos exploradores
 
 data:
-  title: Las máquinas son los nuevos exploradores. Misiones con participación española en Marte.
+  title: <span class="primary_color">Las máquinas son los nuevos exploradores.</span> Misiones con participación española en Marte.
   mainText:
     - El <strong>Centro de Astrobiología (CAB)</strong>, fue creado en 1998 como centro mixto entre el Centro Superior de Investigaciones Científicas (CSIC) y el Instituto Nacional de Técnica Aeroespacial (INTA).  En 2.000 se integró en el <strong>NASA Astrobiology Institute (NAI)</strong> convirtiéndose en el primer Miembro Asociado fuera de los Estados Unidos.
     - <strong>Los equipos multidisciplinares del CAB ya están estudiando la atmósfera de Marte desde tres estaciones ambientales independientes construidas y operativas bajo su liderazgo</strong>.
