--- a/content/08_sectionEsd.yaml
+++ b/content/08_sectionEsd.yaml
@@ -5,7 +5,7 @@ title: Sección
 menuTitle: ESD
 
 data:
-  title: La e/s/d y el CAB
+  title: <span class="primary_color">La e/s/d y el CAB</span>
   mainText:
     - La <strong>Escuela Superior de Diseño de Madrid (e/s/d)</strong> es un centro público perteneciente a las Enseñanzas Artísticas Superiores (Dirección General de Universidades) de la Comunidad de Madrid. En él se imparten los grados y posgrados oficiales en Diseño.
     - En 2020, un grupo de profesores conformamos el <strong>seminario “Diseño para la Ciencia”</strong> con la línea de investigación <strong>“Análisis del rol del diseñador en equipos científicos”</strong>. Desde él, propusimos al CAB la creación de un producto de comunicación sobre el aterrizaje del Perseverance en Marte, <strong>que pusiera en valor la participación en la misión de dicho organismo español</strong> de excelencia, con el MEDA. Y aprovechar tal evento para destacar las presencias previas del CAB en el Planeta Rojo, con el REMS y el TWINS.
