--- a/content/09_sectionFoot.yaml
+++ b/content/09_sectionFoot.yaml
@@ -5,7 +5,7 @@ title: Sección
 menuTitle: Créditos y despedida
 
 data:
-  title: Créditos.<br>Este proyecto es una colaboración del Centro de Astrobiología y la Escuela Superior de Diseño de Madrid.
+  title: <span class="primary_color">Créditos.</span><br>Este proyecto es una colaboración del Centro de Astrobiología y la Escuela Superior de Diseño de Madrid.
   mainText:
     - <strong>Centro de Astrobiología (CAB)</strong>
     - Director. Víctor Parro García
