Click and drag machines test

--- a/content/04_sectionMachines.yaml
+++ b/content/04_sectionMachines.yaml
@@ -68,6 +68,59 @@ data:
               target: true
         picture: "/img/machines/curiosity.webp"
         picture_flag: "/img/flags/EEUU.svg"
+        images360: [
+          'img/curiosity360/Curiosity_1.png',
+          'img/curiosity360/Curiosity_2.png',
+          'img/curiosity360/Curiosity_3.png',
+          'img/curiosity360/Curiosity_4.png',
+          'img/curiosity360/Curiosity_5.png',
+          'img/curiosity360/Curiosity_6.png',
+          'img/curiosity360/Curiosity_7.png',
+          'img/curiosity360/Curiosity_8.png',
+          'img/curiosity360/Curiosity_9.png',
+          'img/curiosity360/Curiosity_10.png',
+          'img/curiosity360/Curiosity_11.png',
+          'img/curiosity360/Curiosity_12.png',
+          'img/curiosity360/Curiosity_13.png',
+          'img/curiosity360/Curiosity_14.png',
+          'img/curiosity360/Curiosity_15.png',
+          'img/curiosity360/Curiosity_16.png',
+          'img/curiosity360/Curiosity_17.png',
+          'img/curiosity360/Curiosity_18.png',
+          'img/curiosity360/Curiosity_19.png',
+          'img/curiosity360/Curiosity_20.png',
+          'img/curiosity360/Curiosity_21.png',
+          'img/curiosity360/Curiosity_22.png',
+          'img/curiosity360/Curiosity_23.png',
+          'img/curiosity360/Curiosity_24.png',
+          'img/curiosity360/Curiosity_25.png',
+          'img/curiosity360/Curiosity_26.png',
+          'img/curiosity360/Curiosity_27.png',
+          'img/curiosity360/Curiosity_28.png',
+          'img/curiosity360/Curiosity_29.png',
+          'img/curiosity360/Curiosity_30.png',
+          'img/curiosity360/Curiosity_31.png',
+          'img/curiosity360/Curiosity_32.png',
+          'img/curiosity360/Curiosity_33.png',
+          'img/curiosity360/Curiosity_34.png',
+          'img/curiosity360/Curiosity_35.png',
+          'img/curiosity360/Curiosity_36.png',
+          'img/curiosity360/Curiosity_37.png',
+          'img/curiosity360/Curiosity_38.png',
+          'img/curiosity360/Curiosity_39.png',
+          'img/curiosity360/Curiosity_40.png',
+          'img/curiosity360/Curiosity_41.png',
+          'img/curiosity360/Curiosity_42.png',
+          'img/curiosity360/Curiosity_43.png',
+          'img/curiosity360/Curiosity_44.png',
+          'img/curiosity360/Curiosity_45.png',
+          'img/curiosity360/Curiosity_46.png',
+          'img/curiosity360/Curiosity_47.png',
+          'img/curiosity360/Curiosity_48.png',
+          'img/curiosity360/Curiosity_49.png',
+          'img/curiosity360/Curiosity_50.png',
+          'img/curiosity360/Curiosity_51.png'
+        ]
       - #1 -- TAB 2
         meta:
           title: Rover Environmental Monitoring Station
@@ -170,6 +223,59 @@ data:
               target: true
         picture: "/img/machines/insight.webp"
         picture_flag: "/img/flags/EEUU.svg"
+        images360: [
+          'img/curiosity360/Curiosity_1.png',
+          'img/curiosity360/Curiosity_2.png',
+          'img/curiosity360/Curiosity_3.png',
+          'img/curiosity360/Curiosity_4.png',
+          'img/curiosity360/Curiosity_5.png',
+          'img/curiosity360/Curiosity_6.png',
+          'img/curiosity360/Curiosity_7.png',
+          'img/curiosity360/Curiosity_8.png',
+          'img/curiosity360/Curiosity_9.png',
+          'img/curiosity360/Curiosity_10.png',
+          'img/curiosity360/Curiosity_11.png',
+          'img/curiosity360/Curiosity_12.png',
+          'img/curiosity360/Curiosity_13.png',
+          'img/curiosity360/Curiosity_14.png',
+          'img/curiosity360/Curiosity_15.png',
+          'img/curiosity360/Curiosity_16.png',
+          'img/curiosity360/Curiosity_17.png',
+          'img/curiosity360/Curiosity_18.png',
+          'img/curiosity360/Curiosity_19.png',
+          'img/curiosity360/Curiosity_20.png',
+          'img/curiosity360/Curiosity_21.png',
+          'img/curiosity360/Curiosity_22.png',
+          'img/curiosity360/Curiosity_23.png',
+          'img/curiosity360/Curiosity_24.png',
+          'img/curiosity360/Curiosity_25.png',
+          'img/curiosity360/Curiosity_26.png',
+          'img/curiosity360/Curiosity_27.png',
+          'img/curiosity360/Curiosity_28.png',
+          'img/curiosity360/Curiosity_29.png',
+          'img/curiosity360/Curiosity_30.png',
+          'img/curiosity360/Curiosity_31.png',
+          'img/curiosity360/Curiosity_32.png',
+          'img/curiosity360/Curiosity_33.png',
+          'img/curiosity360/Curiosity_34.png',
+          'img/curiosity360/Curiosity_35.png',
+          'img/curiosity360/Curiosity_36.png',
+          'img/curiosity360/Curiosity_37.png',
+          'img/curiosity360/Curiosity_38.png',
+          'img/curiosity360/Curiosity_39.png',
+          'img/curiosity360/Curiosity_40.png',
+          'img/curiosity360/Curiosity_41.png',
+          'img/curiosity360/Curiosity_42.png',
+          'img/curiosity360/Curiosity_43.png',
+          'img/curiosity360/Curiosity_44.png',
+          'img/curiosity360/Curiosity_45.png',
+          'img/curiosity360/Curiosity_46.png',
+          'img/curiosity360/Curiosity_47.png',
+          'img/curiosity360/Curiosity_48.png',
+          'img/curiosity360/Curiosity_49.png',
+          'img/curiosity360/Curiosity_50.png',
+          'img/curiosity360/Curiosity_51.png'
+        ]
       - #1 -- TAB 2
         meta:
           title: Temperature and Winds for InSight
@@ -264,6 +370,59 @@ data:
 
         picture: "/img/machines/perseverance.webp"
         picture_flag: "/img/flags/EEUU.svg"
+        images360: [
+          'img/curiosity360/Curiosity_1.png',
+          'img/curiosity360/Curiosity_2.png',
+          'img/curiosity360/Curiosity_3.png',
+          'img/curiosity360/Curiosity_4.png',
+          'img/curiosity360/Curiosity_5.png',
+          'img/curiosity360/Curiosity_6.png',
+          'img/curiosity360/Curiosity_7.png',
+          'img/curiosity360/Curiosity_8.png',
+          'img/curiosity360/Curiosity_9.png',
+          'img/curiosity360/Curiosity_10.png',
+          'img/curiosity360/Curiosity_11.png',
+          'img/curiosity360/Curiosity_12.png',
+          'img/curiosity360/Curiosity_13.png',
+          'img/curiosity360/Curiosity_14.png',
+          'img/curiosity360/Curiosity_15.png',
+          'img/curiosity360/Curiosity_16.png',
+          'img/curiosity360/Curiosity_17.png',
+          'img/curiosity360/Curiosity_18.png',
+          'img/curiosity360/Curiosity_19.png',
+          'img/curiosity360/Curiosity_20.png',
+          'img/curiosity360/Curiosity_21.png',
+          'img/curiosity360/Curiosity_22.png',
+          'img/curiosity360/Curiosity_23.png',
+          'img/curiosity360/Curiosity_24.png',
+          'img/curiosity360/Curiosity_25.png',
+          'img/curiosity360/Curiosity_26.png',
+          'img/curiosity360/Curiosity_27.png',
+          'img/curiosity360/Curiosity_28.png',
+          'img/curiosity360/Curiosity_29.png',
+          'img/curiosity360/Curiosity_30.png',
+          'img/curiosity360/Curiosity_31.png',
+          'img/curiosity360/Curiosity_32.png',
+          'img/curiosity360/Curiosity_33.png',
+          'img/curiosity360/Curiosity_34.png',
+          'img/curiosity360/Curiosity_35.png',
+          'img/curiosity360/Curiosity_36.png',
+          'img/curiosity360/Curiosity_37.png',
+          'img/curiosity360/Curiosity_38.png',
+          'img/curiosity360/Curiosity_39.png',
+          'img/curiosity360/Curiosity_40.png',
+          'img/curiosity360/Curiosity_41.png',
+          'img/curiosity360/Curiosity_42.png',
+          'img/curiosity360/Curiosity_43.png',
+          'img/curiosity360/Curiosity_44.png',
+          'img/curiosity360/Curiosity_45.png',
+          'img/curiosity360/Curiosity_46.png',
+          'img/curiosity360/Curiosity_47.png',
+          'img/curiosity360/Curiosity_48.png',
+          'img/curiosity360/Curiosity_49.png',
+          'img/curiosity360/Curiosity_50.png',
+          'img/curiosity360/Curiosity_51.png'
+        ]
       - #1 -- TAB 2
         meta:
           title: Mars Environmental Dynamics Analyzer
