--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "phosphor-vue": "^1.3.1",
     "scrollmagic": "^2.0.8",
     "scrollmagic-plugins": "^1.0.8",
+    "vue-product-spinner": "^0.2.0",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
