Fix extraResources targets & fix broken link

--- a/content/03_sectionExplorersHome.yaml
+++ b/content/03_sectionExplorersHome.yaml
@@ -24,17 +24,17 @@ assets:
       author: Grupo de investigación e/s/d
       url: /docs/03/Marte_como_lugar.pdf
       icon: file-pdf
-      target: false
+      target: true
     - #2
       title: Relación histórica de misiones a Marte desde 1960
       author: Grupo de investigación e/s/d
-      url: /docs/03/Cronologia_de_las_observaciones_de_marte_hasta_1960.pdf
+      url: /docs/03/Realcion_historica_de_misiones_a_marte_a_partir_de_1960.pdf
       icon: file-pdf
-      target: false
+      target: true
     - #2
-      title: Marte_en_el_imaginario_colectivo
+      title: Marte en el imaginario colectivo
       author: Francisco Torrego Graña
       url: /docs/03/Marte_en_el_imaginario_colectivo.pdf
       icon: file-pdf
-      target: false
+      target: true
 
