--- a/content/02_sectionIntroMisions.yaml
+++ b/content/02_sectionIntroMisions.yaml
@@ -21,22 +21,22 @@ assets:
       author: Grupo de investigación e/s/d
       url: /docs/02/Marte_como_imaginario.pdf
       icon: file-pdf
-      target: false
+      target: true
     - #2
       title: Cronologia de las observaciones de Marte hasta 1960
       author: Grupo de investigación e/s/d
       url: /docs/02/Cronologia_de_las_observaciones_de_marte_hasta_1960.pdf
       icon: file-pdf
-      target: false
+      target: true
     - #3
       title: El murmullo de Marte
       author: Ricardo Horcajada
       url: /docs/02/El_murmullo_de_marte_Ricardo_Horcajada.pdf
       icon: file-pdf
-      target: false
+      target: true
     - #4
       title: Marte en el mito poético grecolatino
       author: Francisco Torrego Graña
       url: /docs/02/Marte_en_el_mito_poetico_grecolatino.pdf
       icon: file-pdf
-      target: false
+      target: true
